<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wetmaths.wetmaths.GameActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/playersNames"
        android:weightSum="3"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:id="@+id/namePlayer1"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:layout_weight="1"
            android:id="@+id/namePlayer2"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player3"
            android:layout_weight="1"
            android:id="@+id/namePlayer3"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:id="@+id/playerScores"
        android:layout_below="@+id/playersNames"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="15dp"
            android:id="@+id/scorePlayer1"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@color/green"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/score"
            android:id="@+id/scorePlayer2"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@color/green"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/score"
            android:id="@+id/scorePlayer3"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@color/green"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_timer"
        android:layout_below="@+id/playerScores"
        android:layout_alignParentEnd="true">
        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30dp"
            android:text="-"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_operation"
        android:layout_below="@+id/layout_timer"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/firstOperand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="-"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginRight="10dp"
            android:text="x"/>

        <TextView
            android:id="@+id/secondOperand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginRight="10dp"
            android:text="-"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginRight="10dp"
            android:text="="/>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Layout_send"
        android:layout_below="@+id/layout_operation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:background="@color/green"
            android:enabled="false"
            android:visibility="gone"/>
        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/start"
            android:background="@color/green"
            android:enabled="false"
            android:visibility="visible"/>/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/keypad1"
        android:layout_below="@+id/Layout_send"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="1"
            android:id="@+id/one"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="2"
            android:id="@+id/two"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="3"
            android:id="@+id/three"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/keypad2"
        android:layout_below="@+id/keypad1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="4"
            android:id="@+id/four"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="5"
            android:id="@+id/five"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="6"
            android:id="@+id/six"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/keypad3"
        android:layout_below="@+id/keypad2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="7"
            android:id="@+id/seven"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="8"
            android:id="@+id/eight"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="9"
            android:id="@+id/nine"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/keypad4"
        android:layout_below="@+id/keypad3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:weightSum="3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="0"
            android:id="@+id/zero"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/backspace"
            android:id="@+id/back"/>
    </LinearLayout>

</RelativeLayout>
